// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography should render Default 1`] = `
<DocumentFragment>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-o2w69a-MuiTypography-root"
  >
    H1
  </h1>
  <h2
    class="MuiTypography-root MuiTypography-h2 css-1sra7t5-MuiTypography-root"
  >
    H2
  </h2>
  <h3
    class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
  >
    H3
  </h3>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
  >
    H4
  </h4>
  <h5
    class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
  >
    H5
  </h5>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
  >
    H6
  </h6>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</DocumentFragment>
`;

exports[`Typography should render Styling 1`] = `
<DocumentFragment>
  <h6
    class="MuiTypography-root MuiTypography-h1 css-o2w69a-MuiTypography-root"
  >
    H6 with styling of H1
  </h6>
  <h5
    class="MuiTypography-root MuiTypography-h2 css-1sra7t5-MuiTypography-root"
  >
    H5 with styling of H2
  </h5>
  <h4
    class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
  >
    H4 with styling of H3
  </h4>
  <h3
    class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
  >
    H3 with styling of H4
  </h3>
  <h2
    class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
  >
    H2 with styling of H5
  </h2>
  <h1
    class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
  >
    H1 with styling of H6
  </h1>
  <strong
    class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </strong>
</DocumentFragment>
`;
